--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -1,13 +1,25 @@
 @import '../../styles.scss';
 
+app-header {
+    position:fixed;
+    z-index: 10;
+    top: 0;
+    left:0;
+    right:0;    
+  }
+
+  app-footer {
+    width: 100%;
+  }
+
 .main {
     @include flexParams(center,center);  
     flex-direction: column;  
-    background-color: $primary-color;
-    width: 100%;
+    background-color: $primary-color;   
+    width: 100%; 
 }
 
 .maincontent {
-    max-width: 1920px;
-    width: 100%;
+    max-width: 1920px; 
+    width: 100%;   
 }
