--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,11 +33,15 @@
     
   }
 
+  /* div {
+    background-color: yellow;
+  } */
+
   app-header {
     position:fixed;
     z-index: 10;
     top: 0;
-    width: 100%;
+    width:100%;    
   }
 
   app-footer {
